k8s/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: games-api
  namespace: bolblab-games
  labels:
    app.kubernetes.io/name: games-api
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: games-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: games-api
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: api
          image: ghcr.io/bolb23/games.bolblab.org/api:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
          startupProbe:
            httpGet:
              path: /api/v1/health
              port: http
            failureThreshold: 30
            periodSeconds: 2
          readinessProbe:
            httpGet:
              path: /api/v1/ready
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: games-data
