k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: games
  namespace: bolblab-games
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - games.bolblab.org
      secretName: games-bolblab-org-tls
  rules:
    - host: games.bolblab.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: games-api
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: games-web
                port:
                  number: 80
